--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-        image: [ debian-11, fedora-37, rocky-9, ubuntu-22.04 ]
+        image: [ ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-* ]
         testpath: [ tests/aws/node ]
         
     with:
