--- a/.github/workflows/test-hetzner.yml
+++ b/.github/workflows/test-hetzner.yml
@@ -1,9 +1,10 @@
-name: 'Test modules/hetzner/node'
+name: 'Test modules/hetzner'
 
 on:
   workflow_dispatch:
   push:
     paths:
+      - '.github/workflows/deploy-test.yml'
       - '.github/workflows/test-hetzner.yml'
       - 'modules/hetzner/**'
       - 'tests/hetzner/**'
@@ -13,105 +14,15 @@ permissions:
 
 jobs:
   terraform:
-    name: 'Terraform'
-    runs-on: ubuntu-latest
-    env:
-      BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-
-    defaults:
-      run:
-        shell: bash
+    uses: ./.github/workflows/deploy-test.yml
+    secrets: inherit
 
     strategy:
       fail-fast: false
       matrix: 
-        image: [ debian-11, fedora-36, rocky-9, ubuntu-22.04 ]
-
-    steps:
-    - 
-      name: Checkout
-      uses: actions/checkout@v3
-      with:
-        ref: ${{ env.BRANCH_NAME }}
-    - 
-      name: Create keypair for test.
-      run: |
-        ssh-keygen -t ed25519 -N '' -f id_ed25519
-        xargs -a id_ed25519 -I{} -d'\n' echo ::add-mask::{}
-        xargs -a id_ed25519.pub -I{} -d'\n' echo ::add-mask::{}
-    - 
-      name: Load keypair for test.
-      run: |
-        echo "Loading KEYFILE \"id_ed25519\" into GITHUB_ENV."
-        echo 'KEYFILE<<EOF' >> $GITHUB_ENV
-        cat id_ed25519 >> $GITHUB_ENV
-        echo EOF >> $GITHUB_ENV
-
-        echo "Loading PUBKEYFILE \"id_ed25519.pub\" into GITHUB_ENV."
-        echo 'PUBKEYFILE<<EOF' >> $GITHUB_ENV
-        cat id_ed25519.pub >> $GITHUB_ENV
-        echo EOF >> $GITHUB_ENV
-    - 
-      name: Create vars file for test.
-      run: |
-        cd tests/hetzner
-        echo "hcloud_token = \"${{ secrets.HETZNER_TOKEN }}\"" >> default.tfvars
-        echo "github_public_key = \"${{ env.PUBKEYFILE }}\"" >> default.tfvars
-    - 
-      name: Update config files for test.
-      run: |
-        cd tests/hetzner
-        sed -i 's|hetzner.node|${{ github.sha }}-${{ matrix.image }}-node|' files/config.json
-        sed -i 's|hetzner.network|${{ github.sha }}-${{ matrix.image }}-net|' files/config.json
-        sed -i 's|hetzner.image|${{ matrix.image }}|' files/config.json
-    - 
-      name: Terraform Plan
-      uses: labrats-work/action-terraform@main
-      with:
-        chdir: tests/hetzner
-        verb: plan
-        init: yes
-        varsFile: default.tfvars
-        planFile: tfplan
-    - 
-      name: Terraform Apply
-      uses: labrats-work/action-terraform@main
-      with:
-        chdir: tests/hetzner
-        verb: apply
-        init: yes
-        varsFile: default.tfvars
-        planFile: tfplan
-    - 
-      if: always()
-      id: destroy
-      continue-on-error: true
-      name: Terraform Destroy
-      uses: labrats-work/action-terraform@main
-      with:
-        chdir: tests/hetzner
-        verb: destroy
-        init: yes
-        varsFile: default.tfvars
-    - 
-      if: always() && steps.destroy.outcome == 'failure'
-      id: destroy2
-      continue-on-error: true
-      name: Terraform Destroy Retry
-      uses: labrats-work/action-terraform@main
-      with:
-        chdir: tests/hetzner
-        verb: destroy
-        init: yes
-        varsFile: default.tfvars
-    - 
-      if: always() && steps.destroy2.outcome == 'failure'
-      id: destroy3
-      continue-on-error: true
-      name: Terraform Destroy Retry
-      uses: labrats-work/action-terraform@main
-      with:
-        chdir: tests/hetzner
-        verb: destroy
-        init: yes
-        varsFile: default.tfvars
+        image: [ debian-11, fedora-37, rocky-9, ubuntu-22.04 ]
+        testpath: [ tests/hetzner/node, tests/hetzner/node_group ]
+        
+    with:
+      IMAGE: ${{ matrix.image }}
+      TESTPATH: ${{ matrix.testpath }}
