--- a/.github/workflows/test-aws.yml
+++ b/.github/workflows/test-aws.yml
@@ -13,7 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  terraform:
+  aws:
     uses: ./.github/workflows/deploy-test.yml
     secrets: inherit
 
