--- a/.github/workflows/test-full.yml
+++ b/.github/workflows/test-full.yml
@@ -1,4 +1,4 @@
-name: 'Full Test and Tag'
+name: 'Deploy Test and Tag'
 
 on:
   push:
@@ -36,42 +36,5 @@ jobs:
       TESTPATH: ${{ matrix.testpath }}
 
   update-version:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    needs: [ aws, hetzner ]
-    steps:
-      # Check out the repository
-      - uses: actions/checkout@v3
-      
-      # Read the current version number from the galaxy.yml file
-      - id: current_version
-        shell: bash
-        run: |
-          echo $(git tag | sort -V | tail -1)
-          echo "version=$(git tag | sort -V | tail -1)" >> $GITHUB_OUTPUT
-      
-      # Increment the patch version number by one
-      - id: patch_version
-        run: |
-          version=$(echo "${{ steps.current_version.outputs.version }}" | awk -F':' '{print $2}')
-          major=$(echo "$version" | awk -F'.' '{print $1}')
-          minor=$(echo "$version" | awk -F'.' '{print $2}')
-          patch=$(echo "$version" | awk -F'.' '{print $3}')
-          new_patch=$((patch+1))
-          new_version="$major.$minor.$new_patch"
-          echo "Updating version to $new_version"
-          sed -i "s/$version/$new_version/g" galaxy.yml
-          echo "new_version=$new_version" >> $GITHUB_OUTPUT
-      
-      # Commit the changes to the repository without pushing
-      - run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add galaxy.yml
-          git commit -m "Update galaxy.yml version to ${{ steps.patch_version.outputs.new_version }}"
-          git push
-          git tag ${{ steps.patch_version.outputs.new_version }}
-          git push origin --tags
-          
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    uses: ./.github/workflows/deploy-test.yml
+    secrets: inherit
