--- a/.github/workflows/push-tag.yml
+++ b/.github/workflows/push-tag.yml
@@ -24,10 +24,9 @@ jobs:
       # Increment the patch version number by one
       - id: patch_version
         run: |
-          version=$(echo "${{ steps.current_version.outputs.version }}" | awk -F':' '{print $2}')
-          major=$(echo "$version" | awk -F'.' '{print $1}')
-          minor=$(echo "$version" | awk -F'.' '{print $2}')
-          patch=$(echo "$version" | awk -F'.' '{print $3}')
+          major=$(echo "${{ steps.current_version.outputs.version }}" | awk -F'.' '{print $1}')
+          minor=$(echo "${{ steps.current_version.outputs.version }}" | awk -F'.' '{print $2}')
+          patch=$(echo "${{ steps.current_version.outputs.version }}" | awk -F'.' '{print $3}')
           new_patch=$((patch+1))
           new_version="$major.$minor.$new_patch"
           echo "Updating version to $new_version"
