--- a/.github/workflows/test-full.yml
+++ b/.github/workflows/test-full.yml
@@ -36,6 +36,6 @@ jobs:
       TESTPATH: ${{ matrix.testpath }}
 
   push-tag:
-    needs: [ aws, hetzner]
+    needs: [ hetzner]
     uses: ./.github/workflows/push-tag.yml
     secrets: inherit
