--- a/.github/workflows/test-full.yml
+++ b/.github/workflows/test-full.yml
@@ -10,6 +10,9 @@ on:
       - 'modules/hetzner/**'
       - 'tests/hetzner/**'
 
+permissions:
+  workflows: write
+  
 jobs:
   # aws:
   #   uses: ./.github/workflows/deploy-test.yml
