--- a/.github/workflows/test-full.yml
+++ b/.github/workflows/test-full.yml
@@ -1,6 +1,7 @@
 name: 'Deploy Test and Tag'
 
 on:
+  workflow_dispatch:
   push:
     branches: 
       - main
@@ -12,7 +13,7 @@ on:
 
 permissions:
   workflows: write
-  
+
 jobs:
   # aws:
   #   uses: ./.github/workflows/deploy-test.yml
