--- a/.github/workflows/push-tag.yml
+++ b/.github/workflows/push-tag.yml
@@ -40,4 +40,4 @@ jobs:
           git push origin --tags
           
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
