--- a/.github/workflows/push-tag.yml
+++ b/.github/workflows/push-tag.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Check out the repository
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           token: ${{ secrets.WORKFLOW_TOKEN }}
       
@@ -33,5 +33,7 @@ jobs:
       
       # Commit the changes to the repository without pushing
       - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git tag ${{ steps.patch_version.outputs.new_version }}
           git push origin --tags
